2007-06-20  Neil J. Patel  <njpatel@gmail.com>

	* data/avant-window-navigator.desktop.in.in:
	Removed 'Application' category from desktop file, as it is not a valid
	desktop category.

2007-06-20  Neil J. Patel  <njpatel@gmail.com>

	* libawn/Makefile.am:
	Added -shared flag to gcc

2007-06-19  Neil J. Patel  <njpatel@gmail.com>

	* src/main.c: (main):
	Check g_thread_supported () before calling g_thread_init ().

2007-06-18  Neil J. Patel  <njpatel@gmail.com>

	* applets/separator/applet.c: (expose), (awn_applet_factory_init):
	Made separator draw a clear rectangle.

	* configure.in:
	* src/awn-applet-manager.c: (awn_applet_manager_load_applets):
	* src/awn-applet-manager.h:
	* src/awn-applet-proxy.h:
	* src/main.c:
	Some cleanup work.

2007-06-16  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-applet-manager.c: (awn_applet_manager_load_applets):
	If there are no applets, add the task manager.

2007-06-16  Neil J. Patel  <njpatel@gmail.com>

	* libawn/Makefile.am:
	Added $(AWN_LIBS) to LDADD.

2007-06-16  Neil J. Patel  <njpatel@gmail.com>

		* src/awn-task-manager.c: (_refresh_box):
		Check that the task manager is valid.

2007-06-16  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-applet-manager.c: (_load_taskmanager), (_create_applet),
	(awn_applet_manager_load_applets):
	* src/main.c: (main):
	Task manager is now an (internal) applet. So you can order it like
	any other applet.

2007-06-16  Neil J. Patel  <njpatel@gmail.com>

	* applets/Makefile.am:
	* applets/taskman.desktop:
	An internal test applet.

 * src/main.c: (main):
 Swapped the threads_init function to be the first called.


2007-06-16  Neil J. Patel  <njpatel@gmail.com>

	* src/main.c: (main):
	Added a DBus thread init () function.

2007-06-16  Neil J. Patel  <njpatel@gmail.com>

	* COPYING:
	* applets/separator/Makefile.am:
	* applets/separator/applet.c: (awn_applet_factory_init):
	* applets/separator/separator.desktop.in.in:
	* configure.in: